# advent_of_code_2022

./: Cargo.toml  LICENSE
src/: day1_calorie_counting.rs  day2_rock_paper_scissors.rs  day3_rucksack_reorganization.rs  day4_camp_cleanup.rs  day5_supply_stacks.rs  day6_tuning_trouble.rs  day7_no_space_left_on_device.rs  main.rs
