[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.2"
transpose = "0.2.2"
parse-display = "0.7.0"
#hex = "0.4" // used for 2021
#bitvec = "0.22" // used for 2021

[profile.release]
strip = true  # Automatically strip symbols from the binary.
#opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"